# spritz

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
dlna/: Cargo.toml
dlna/src/: content_dir.rs  description.rs  lib.rs  soap.rs  ssdp.rs
