[workspace]
resolver = "3"
members = [
    "core",
    "cli",
    "api",
    "dlna"
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/dfallman/spritz"
authors = ["Daniel Fallman"]

[workspace.dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
