[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
spritz-core = { version = "0.1.0", path = "../core" }
local-ip-address = "0.6.11"
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
urlencoding = "2.1.3"
