[package]
name = "api"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dlna = { version = "0.1.0", path = "../dlna" }
uuid = { version = "1", features = ["v4"] }
spritz-core = { version = "0.1.0", path = "../core" }
local-ip-address = "0.6.11"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
