[package]
name = "api"
version.workspace = true
edition = "2024"
description = "HTTP + M3U server for the Spritz DLNA media server."
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dlna = { version = "0.1.3", path = "../dlna" }
uuid = { version = "1", features = ["v4"] }
spritz-core = { version = "0.1.3", path = "../core" }
local-ip-address = "0.6.11"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
tracing = "0.1"
