[package]
name = "cli"
version.workspace = true
edition = "2024"
description = "Nano DLNA media server — run in any folder to share it on the LAN."
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "spritz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
api = { version = "0.1.3", path = "../api" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
