[package]
name = "dlna"
version.workspace = true
edition = "2024"
description = "DLNA/UPnP AV server implementation (SSDP, ContentDirectory, ConnectionManager) for Spritz."
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
httpdate = "1.0"
if-addrs = "0.15"
socket2 = "0.6"
spritz-core = { version = "0.1.1", path = "../core" }
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
